# object-detection

./: Dockerfile  Dockerfile.ubuntu22.nvidia4060  Dockerfile.win11  README.md  docker-compose.ubuntu22.nvidia4060.yml  docker-compose.win11.yml  docker-compose.yml  pyproject.toml  run.sh
src/: main.py
src/object-detector/: __init__.py  yolov5-detector.py
src/utils/: __init__.py  distance-calculator.py  get-camera-feed.py
